// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerConnectionStep should emit event on connect 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div
        data-testid="ImportWallet__network"
      />
    </fieldset>
    <div
      class="flex flex-col overflow-hidden rounded-xl"
    >
      <div
        class="css-1dwg83m"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            circle-check-mark.svg
          </svg>
        </div>
        <span>
          Success
        </span>
      </div>
      <div
        class="css-k5jr4t"
      >
        Successfully connected
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerConnectionStep should emit event on connection fail 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div
        data-testid="ImportWallet__network"
      />
    </fieldset>
    <div
      class="flex flex-col overflow-hidden rounded-xl"
    >
      <div
        class="css-ic0qlc"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            circle-cross.svg
          </svg>
        </div>
        <span>
          Error
        </span>
      </div>
      <div
        class="css-6o9bco"
      >
        Unable to connect to Ledger device. Please ensure that all other applications that connect to your Ledger are closed.
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerConnectionStep should render cancel screen 1`] = `
<div>
  <div
    class="space-y-8"
    data-testid="LedgerCancellingScreen"
  >
    <svg
      class="mx-auto max-w-full"
    >
      error-transaction-ledger-banner-light-green.svg
    </svg>
    <div
      class="inline-flex w-full items-center justify-center space-x-3"
    >
      <div
        class="css-i3nrbr"
        color="info"
      />
      <span
        class="animate-pulse font-semibold text-theme-secondary-text"
      >
        Cancelling Ledger Import, please wait...
      </span>
    </div>
  </div>
</div>
`;

exports[`LedgerConnectionStep should show update error if app version is less than minimum version 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div
        data-testid="ImportWallet__network"
      />
    </fieldset>
    <div
      class="flex flex-col overflow-hidden rounded-xl"
    >
      <div
        class="css-ic0qlc"
      >
        <div
          class="css-v0ob3f"
          height="16"
          width="16"
        >
          <svg>
            circle-cross.svg
          </svg>
        </div>
        <span>
          Error
        </span>
      </div>
      <div
        class="css-6o9bco"
      >
        The ARK app version is 1.0.1. Please update the ARK app via Ledger Live.
      </div>
    </div>
  </section>
</div>
`;
